Order the customers

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ applyBodyTag="false"
 >
 <html ng-app="listMe">
 <head>
-  <title> Tasky </title>
+  <title> ListMe </title>
   <apex:stylesheet value="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400"/>
   <meta name="viewport" content="width=device-width, initial-scale=1,  minimum-scale=1, maximum-scale=1, user-scalable=no"/>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"> </script>
