--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@ applyBodyTag="false"
   <h1> List Me </h1>
   <h2> List of Events </h2>
     <div ng-repeat="event in events">
-      <p ng-click="getCustomers(event)"> {{event.Name}} </p>
+      <p ng-click="getActiveCustomers(event)"> {{event.Name}} </p>
     </div>
   <h2> List of Customers </h2>
   <div ng-repeat="customer in customers">
-    <p> {{customer.Name}} </p>
+    <p ng-click="removeCustomer($index, customer)"> {{customer.Name}} </p>
   </div>
   <form ng-submit="createCustomer(firstName, lastName, currentEvent.Id)">
     <p> First Name </p>
@@ -69,10 +69,10 @@ applyBodyTag="false"
     getEvents();
 
     /** Gets all the Customers that are in the event with Id EVENTID. */
-    $scope.getCustomers = function(event) {
+    $scope.getActiveCustomers = function(event) {
       $scope.currentEvent = event;
       Visualforce.remoting.Manager.invokeAction(
-        '{!$RemoteAction.ListMeController.getCustomers}',
+        '{!$RemoteAction.ListMeController.getActiveCustomers}',
         event.Id,
         function(result, event) {
           if (event.status) {
@@ -95,7 +95,8 @@ applyBodyTag="false"
         eventId,
         function(result, event) {
           if (event.status) {
-            $scope.customers.add(result);
+            $scope.customers.push(result);
+            $scope.$apply();
           } else if (event.type == 'exception') {
             alert('Exception: ' + event.message);
           } else {
@@ -105,6 +106,22 @@ applyBodyTag="false"
         );
     }
 
+    $scope.removeCustomer = function(index, customer) {
+      $scope.customers.splice(index, 1);
+      Visualforce.remoting.Manager.invokeAction(
+        '{!$RemoteAction.ListMeController.removeCustomer}',
+        customer.Id,
+        function(result, event) {
+          if (event.status) {
+
+          } else if (event.type == 'exception') {
+            alert('Exception: ' + event.message);
+          } else {
+            alert('Error: ' + event.message);
+          }
+        }
+        );
+    }
   });
 </script>
 </html>
