--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@ applyBodyTag="false"
   </apex:repeat>
 
   <button type="submit"> Submit Form </button>
-  <button type="button" ng-click="createLineGraph(currentEvent)"> Get line graph </button>
+  <button type="button" ng-click="createLineGraph(currentEvent, true)"> Get line graph </button>
+  <button type="button" ng-click="createLineGraph(currentEvent, false)"> Get line graph 2</button>
+
 </form>
 
 </body>
@@ -154,9 +156,15 @@ listMeApp.controller('EventController', function($scope) {
       );
   }
 
-  $scope.createLineGraph = function(event) {
+  $scope.createLineGraph = function(event, all) {
+    var remoteAct;
+    if (all) {
+      remoteAct = '{!$RemoteAction.ListMeController.getSignUpTimes}';
+    } else {
+      remoteAct = '{!$RemoteAction.ListMeController.getOffTimes}';
+    }
     Visualforce.remoting.Manager.invokeAction(
-      '{!$RemoteAction.ListMeController.getSignUpTimes}',
+      remoteAct,
       event.Id,
       function(result, event) {
         if (event.status) {
