front-end quick fix

--- a/preview.html
+++ b/preview.html
@@ -202,6 +202,15 @@ id="todo"
     margin-top: -2px;
   }
 
+  .img-right-main {
+    float: right;
+    width: 46px;
+    height: 46px;
+    margin-left: -3px;
+    margin-right: 16px;
+    margin-top: -2px;
+  }
+
   .arrow-back {
     position: absolute;
     top: 20px;
@@ -361,8 +370,8 @@ id="todo"
   <div id="container">
     <section id="one" class="active">
       <div class="link">
-        <img class="img-right" src="{!URLFOR($Resource.listMeAssets, 'expand.svg')}"/>
-        <img class="img-right" src="{!URLFOR($Resource.listMeAssets, 'add.svg')}"/>
+        <img class="img-right-main" src="{!URLFOR($Resource.listMeAssets, 'expand.svg')}"/>
+        <img class="img-right-main" src="{!URLFOR($Resource.listMeAssets, 'add.svg')}"/>
         <h1 class="list-header"> Waitlist </h1>
       </div>
       <div class="link">
