quick color change

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ applyBodyTag="false"
 
   .line {
     fill: none;
-    stroke: steelblue;
+    stroke: #2f92d0;
     stroke-width: 1.5px;
   }
   </style>
